	CommandLine:	1.0.4.1

1.1.1.4

	main map (luca.map) is now higher resolution (800x500)
	world map (world.map) is now higher resolution (800x500)
	MapEditor can load TEG/JTEG xml maps
	Card Ownership view shows you the cards you own when you dont own the country in Yellow

	Android 32 android:installLocation changed from preferExternal to auto as it did not work on some devices (GT-i5500)
	Android 31 allows human to view mssion at end of game if AI won
		   wakelock added when game screen is open
		   got rid of titlebar in main menu
		   fixed: nullpointer in getting game commands when game is not open

1.1.1.3 (10.03.2013)

	Online Mini Lobby added to FlashGUI and SwingGUI
	Brazilian Portuguese added by Ricardo Gomes Ponce
	much more info added to the Testing tab in SwingGUI
	game.ini has ai.wait property that can be changed
	other game.ini properties work fully now
	MapEditor can detect more errors on missions
	SwingGUI can remember the players you used last time
	new pluggable AI system
	NEW AI BY Steven Hawkins

	Android 30 fixed: do not show old games when re-connect to lobby
		   fixed: Threading problem in ViewChooser isEmpty() is false but get(0) throws ArrayIndexOutOfBoundsException
		   fixed: open 2 games at the same time in lobby gives window is already open error
		   option to disable tooltips added
		   new ai
	Android 29 can view hint at any point
		   annihilate button added to battle dialog
		   show tooltip at start of go
	Android 28 can resign from a online game
	Android 27 do not allow someone to make a mission online game with a map that does not have missions
		   display lobby chat messages more correctly
		   fixed: entering a game half way through a attack, either roll or move armes is not working
		   online play works for everyone
		   fixed: nullpointer in MapStore after updateall if select is clicked
	Android 26 donate button fixed
		   double click on online game fix
		   do not crash on failed to send message for lobby