@@ -21,6 +21,7 @@ CURRENT VERSION:
 	Card Ownership view shows you the cards you own when you dont own the country in Yellow
 
 	Android 32 android:installLocation changed from preferExternal to auto as it did not work on some devices (GT-i5500)
+		   cards graph added
 	Android 31 allows human to view mssion at end of game if AI won
 		   wakelock added when game screen is open
 		   got rid of titlebar in main menu
